<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomePage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_page_title"
        android:text="@string/car_communication"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_page_welcome"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:layout_below="@id/home_page_title"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:gravity="center"/>


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_page_chats"
        android:layout_below="@id/home_page_welcome"
        android:text="@string/chats"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_page_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_page_chats"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:text="@string/connect_via_text" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_page_image"
        android:layout_below="@id/home_page_text"
        android:text="@string/connect_via_image"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_page_logout"
        android:layout_below="@id/home_page_image"
        android:text="@string/log_out"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_page_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />







</RelativeLayout>