<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/car_communication"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:background="#30ffffff"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signinbtn"
        android:layout_below="@id/password"
        android:text="@string/sign_in"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signupbtn"
        android:layout_below="@id/signinbtn"
        android:text="@string/sign_up"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotpass"
        android:layout_below="@id/signupbtn"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>