<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ForgotPass">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_title"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_message"
        android:text="@string/enter_your_email_so_we_can_send_a_change_password_link"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/forgot_pass_title"
        android:layout_margin="50dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_mail"
        android:layout_below="@id/forgot_pass_message"
        android:background="#30ffffff"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />



    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_send"
        android:layout_below="@id/forgot_pass_mail"
        android:text="@string/send"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_return"
        android:text="@string/return_to_sign_in"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_below="@id/forgot_pass_send"
        android:gravity="center"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>