<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ViaText">


    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/via_text_home"
        android:background="@drawable/ic_baseline_home_24"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/via_text_title"
        android:text="@string/connect_via_text"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_below="@id/via_text_home"
        android:layout_marginBottom="30dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/via_text_message"
        android:text="@string/enter_the_car_license_plate_number_to_connect"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/via_text_title"
        android:layout_margin="50dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/via_text_license"
        android:layout_below="@id/via_text_message"
        android:background="#30ffffff"
        android:hint="@string/license_plate_number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_directions_car_24"
        android:drawablePadding="20dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/via_text_connect"
        android:layout_below="@id/via_text_license"
        android:text="@string/connect"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

</RelativeLayout>