<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Example">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/example_title"
        android:text="@string/please_make_sure_to_take_the_image_just_like_the_example_shown_n_nexample"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/example_1"
        android:layout_below="@+id/example_title"
        android:layout_marginTop="5dp"
        android:src="@drawable/license_example1"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/example_or"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@+id/example_1"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/example_2"
        android:layout_below="@+id/example_or"
        android:src="@drawable/license_example2"
        tools:ignore="ContentDescription" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/example_btn"
        android:layout_below="@+id/example_2"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:text="@string/ok"
        android:textSize="30sp"
        android:layout_margin="40dp"
        />

</RelativeLayout>